# foundry

./: Cargo.toml  FORK.md
.github/workflows/: fork-release.yml
castup/: castup  install
crates/anvil/src/eth/: api.rs  error.rs
crates/anvil/src/eth/backend/mem/: mod.rs
crates/anvil/tests/it/: simulate.rs
crates/anvil/tests/it/spec_eth_simulateV1/: run_spec_tests.py
crates/batch-ops/: Cargo.toml
crates/batch-ops/src/: collect.rs  distribute.rs  input.rs  lib.rs  types.rs
crates/cast/: Cargo.toml
crates/cast/src/: args.rs  opts.rs  tx.rs
crates/cast/src/cmd/: collect.rs  distribute.rs  erc20.rs  mod.rs  send.rs
crates/cobo-mpc/: Cargo.toml
crates/cobo-mpc/src/: auth.rs  client.rs  lib.rs  provider.rs  signer.rs  types.rs
crates/remote-signer/: Cargo.toml
crates/remote-signer/src/: auth.rs  client.rs  lib.rs  signer.rs  types.rs
crates/wallets/: Cargo.toml
crates/wallets/src/: error.rs  opts.rs  signer.rs
docs/: e2e-remote-signer-anvil.md
scripts/: sync-upstream.sh
tests/spec/: run_spec_tests.py  run_spec_tests.sh
