[package]
name = "foundry-batch-ops"
description = "Batch distribute/collect operations for Foundry cast"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-network.workspace = true
alloy-rpc-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, features = ["mnemonic"] }
alloy-serde.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-consensus.workspace = true
alloy-dyn-abi.workspace = true

eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

csv = "1.3"

[dev-dependencies]
tempfile.workspace = true
