[package]
name = "foundry-cobo-mpc"
description = "Cobo MPC wallet signer integration for Foundry"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-signer = { workspace = true, features = ["eip712"] }
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-sol-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-rpc.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-serde.workspace = true
alloy-transport.workspace = true

async-trait.workspace = true
eyre.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
thiserror.workspace = true

ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
