[package]
name = "foundry-remote-signer"
description = "Remote HTTP signer integration for Foundry"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-signer = { workspace = true, features = ["eip712"] }
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-sol-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-rlp.workspace = true

async-trait.workspace = true
eyre.workspace = true
remote-signer-client = { path = "../../../remote-signer/pkg/rs-client" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
tracing.workspace = true
thiserror.workspace = true

hex = "0.4"

[[bin]]
name = "unlock_signer"
path = "src/bin/unlock_signer.rs"

[[bin]]
name = "create_signer"
path = "src/bin/create_signer.rs"
